# master-thesis

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.celery  Giorgos.ipynb  Makefile  README.md  Untitled.ipynb  docker-compose.prod.yml  docker-compose.yml  minHash_test.ipynb  pyproject.toml  pyspark-test.ipynb  requirements.txt  test.ipynb  thesis_test-Copy1.ipynb  thesis_test.ipynb
.github/workflows/: main.yml  pr.yml
.ipynb_checkpoints/: docker-compose-checkpoint.yml  test-checkpoint.ipynb  thesis_test-Copy1-checkpoint.ipynb  thesis_test-checkpoint.ipynb
_containers/research/: Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/backend/: celery.py  settings.py  urls.py
backend/core/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/pipeline/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
container/: README.md  docker-compose.yml
containers/join-server/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
containers/research/: Dockerfile  README.md  docker-compose.yml  requirements.txt
data/: 10000_A_2500.csv  10000_B_2500.csv  10000_C_2500.csv  10000_D_2500.csv  10000_E_2500.csv  1000_A_250.csv  1000_B_250.csv  1000_C_250.csv  1000_D_250.csv  1000_E_250.csv  50000_A_12500.csv  50000_B_12500.csv  50000_C_12500.csv  50000_D_12500.csv  50000_E_12500.csv
docs/experiments/: 00_pyspark-test.ipynb  00_small_sample_experiment.ipynb  (+6 more)
scripts/: entrypoint.sh  run_mypy.sh
tests/: test1.py
(+50 files in other folders)
