[tool.poetry]
name = "joinserver"
version = "0.1.0"
description = "Multi-party data matching system"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# Django and REST framework
Django = ">=4.2,<5.1"
djangorestframework = ">=3.14"
psycopg2-binary = ">=2.9"
drf-spectacular = ">=0.25"

# Background tasks & messaging
celery = ">=5.3.0"
redis = ">=4.5.0"

# Data tools
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"
pyspark = "==4.0.0"

# Dev tools
watchdog = ">=3.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
django-stubs = ">=4.2.0"
pylint = ">=2.17.0"
pre-commit = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "backend.settings"
